- Switch to ProcessBuilder when doing exec - More/better logging - Clean up double // on intputs, and make it mp4